--- a/Szakdolgozat/src/szakdolgozat/workers.form
+++ b/Szakdolgozat/src/szakdolgozat/workers.form
@@ -224,29 +224,29 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="database">
+    <Component class="javax.swing.JButton" name="nonactive">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Adatb&#xe1;zisb&#xf3;l"/>
+        <Property name="text" type="java.lang.String" value="Nem akt&#xed;v dolgoz&#xf3;k"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="databaseActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nonactiveActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="533" y="175" width="-1" height="-1"/>
+          <AbsoluteConstraints x="410" y="210" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JButton" name="workers">
+    <Component class="javax.swing.JButton" name="activate">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Dolgoz&#xf3;kb&#xf3;l"/>
+        <Property name="text" type="java.lang.String" value="Akt&#xed;v&#xe1;l"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="workersActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="activateActionPerformed"/>
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="721" y="175" width="-1" height="-1"/>
+          <AbsoluteConstraints x="600" y="210" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
